# rust-bitcoin-wallet-blockbuilder

./: README.md
.github/test/: setup.sh
solution/: block.txt  run_balance.sh  run_builder.sh  run_spend.sh
solution/rust/balance/: Cargo.toml
solution/rust/balance/src/: lib.rs  main.rs
solution/rust/block_selection/src/: main.rs  selection.rs  test.rs  todo.txt  write.rs
solution/rust/spend/: Cargo.toml
solution/rust/spend/src/: lib.rs  main.rs
