[package]
name = "balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitcoin = "0.32.5"
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
k256 = "0.13.4"
num-bigint = "0.4.6"
num-traits = "0.2.19"
ripemd = "0.1.3"
secp256k1 = "0.30.0"
serde_json = "1.0.135"
sha2 = "0.10.8"
# Add you custom dependencies below

