[package]
name = "spend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
balance = {path = "../balance"}
bitcoin = "0.32.5"
hex = "0.4.3"
hex-literal = "0.4.1"
log = "0.4.25"
secp256k1 = "0.30.0"
serde_json = "1.0.137"
sha2 = "0.10.8"
